Fixed the colors and alignment

--- a/theme/css/zend-expressive.css
+++ b/theme/css/zend-expressive.css
@@ -9,25 +9,40 @@ body {
 }
 
 .jumbotron {
-    background-color: #8234BF;
-    color: white;
-    padding:21px;
+    background-color: #018D74;
+    padding: 21px;
 }
 
 .jumbotron > h1, .jumbotron p {
     font-weight: normal;
-    margin:21px;
-    text-align:center;
+    margin: 21px;
+    text-align: center;
+    color: white;
 }
 
 .jumbotron > pre[class*="language-"] {
      text-align:center;
+     border-width: 0;
+}
+
+:not(pre) > pre[class*="language-"] {
+    border-radius: 0;
+    background-color: #2E2E2D;
 }
 
 .navbar-default {
-    border-bottom: 0px;
-    border-radius: 0em;
+    border-bottom: 0;
+    border-radius: 0;
 }
-.install .panel {
-    background-color: #0AE955;
+.install + .panel {
+    background-color: #66FFCC;
+}
+
+.container.install h2 {
+    text-align: center;
+} 
+
+.screenshot {
+    margin-left: auto;
+    margin-right: auto;
 }
